# exemplar

./: LICENSE  README.md  copier.yml  mise.toml  pyproject.toml
exemplar/: README.md.jinja  copier.yml  pyproject.toml.jinja
