[project]
name = "exemplar"
version = "0.1.0"
description = "Python project template"
authors = [
    {name = "Radosław Ganczarek",email = "radoslaw@ganczarek.in"}
]
license = "BSD 3-Clause License"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "copier (>=9.14.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
